--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,3 +5,12 @@
     border: 1px solid #30155a;
     border-style: solid none none none;
   }
+@font-face {
+  font-family: "Play";
+  src: url(Play-Regular.ttf);
+}
+body{
+  font-family: "Play", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
